add section how to run it to README.md